--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
       <div class="row">
         <div class="col-md-6">
           <h2>You said:</h2>
-          <ul>
+          <ul id="user">
+            <img id="catimg" src="img/cat.jpg">
 
           </ul>
         </div>
 
         <div class="col-md=6">
           <h2>The webpage said:</h2>
-          <ul>
+          <ul id="webpage">
 
           </ul>
         </div>
