--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
           <h2>You said:</h2>
           <ul id="user">
             <img id="catimg" src="img/cat.jpg">
-
           </ul>
         </div>
 
         <div class="col-md=6">
           <h2>The webpage said:</h2>
           <ul id="webpage">
-
+            <img id="dogimg" src="img/dog.jpg">
           </ul>
         </div>
       </div>
