adjust js and html files to work properly

--- a/index.html
+++ b/index.html
@@ -11,25 +11,26 @@
   <body>
     <div class="container">
       <h1>This webpage will talk to you!</h1>
-
       <button class="btn btn-primary" id="cat">For cats!</button>
       <button class="btn btn-info" id="dog">Doggy Party!</button>
 
       <div class="row">
         <div class="col-md-6">
+
+          <img id="catimg" src="img/cat.jpg">
+          <img id="dogimg" src="img/dog.jpg">
+
           <h2>You said:</h2>
-          <ul id="user">
-            <img id="catimg" src="img/cat.jpg">
-          </ul>
+          <ul id="user"></ul>
         </div>
 
         <div class="col-md=6">
+
           <h2>The webpage said:</h2>
-          <ul id="webpage">
-            <img id="dogimg" src="img/dog.jpg">
-          </ul>
+          <ul id="webpage"></ul>
         </div>
       </div>
+
     </div>
   </body>
 </html>
